Support \Sort in \data